update open api single game api return genres and publishers
